# solving_interpolation_problems

./: CMakeLists.txt  building_graphs.nb  main.cpp  main.h  print_slae.cpp  tests.cpp
interpolation/: file_creation.cpp  interpolation.h  interpolation_with_Lagrangian_polynomial.cpp  interpolation_with_natural_cubic_spline.cpp  math_functions.cpp  math_functions.h  mesh_creation.cpp  table_creation.cpp
sweep_method/: sweep_method.cpp  sweep_method.h
